<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cgi.UI.GraphsActivity" >

    <LinearLayout 
        android:id="@+id/activity_graphs_top_layout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
     	<TextView
        	android:id="@+id/activity_graphs_title"
        	android:text="@string/activity_graphs_graph_title"
        	android:textSize="40sp"
        	android:gravity="center"
        	android:textColor="#000000"
        	android:layout_weight="0.9"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
       	/>
     	
     	<Button 
        	android:id="@+id/activity_graph_button_update"
        	android:text="@string/activity_graphs_update_OFF"
			android:background="@drawable/red_button"
			style="@style/ButtonText"
			android:textSize="25sp"
			android:layout_width="wrap_content"
			android:layout_weight="0.1"
        	/>
     	
    </LinearLayout>
    
   	<LinearLayout 
        android:orientation="horizontal"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_below="@id/activity_graphs_top_layout">
		
    	<com.jjoe64.graphview.GraphView
        	android:id="@+id/activity_graphs_graph"
       		android:layout_width="0dp"
       		android:layout_height="fill_parent"
       		android:layout_weight="0.95"
       	/>
    	
    	<TextView
    		android:id="@+id/activity_graphs_secondYaxis_title"
    	    android:layout_width="25dp"
    	    android:gravity="center"
    	    android:layout_height="fill_parent"
    	    android:layout_weight="0.05"
    	    android:rotation="90"
    	    android:layout_marginRight="5dp"
    	    android:text="@string/activity_graphs_secondYAxis_title"
    	    android:textSize="30sp" 
   		/>
        
    </LinearLayout>

</RelativeLayout>
